--- a/app/src/main/res/layout/fragment_results_summary.xml
+++ b/app/src/main/res/layout/fragment_results_summary.xml
@@ -74,14 +74,63 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
-    <ListView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lvResultsSummary"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:id="@+id/scrollView"
         android:layout_above="@+id/linearLayout"
-        android:footerDividersEnabled="true"
-        android:headerDividersEnabled="false"
-        android:layout_below="@+id/view"/>
+        android:layout_below="@+id/view">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/lvResultsSummary"
+                android:footerDividersEnabled="true"
+                android:headerDividersEnabled="false"
+                android:layout_alignParentTop="true"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/dark_grey"
+                android:layout_below="@+id/lvResultsSummary"
+                android:id="@+id/line2"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="30dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:layout_below="@+id/line2"
+                android:text="@string/audio_files"
+                android:layout_centerHorizontal="true"
+                style = "@style/TextColor"
+                android:id="@+id/tvAudioFiles"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/dark_grey"
+                android:layout_below="@+id/tvAudioFiles"
+                android:id="@+id/line3"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"/>
+
+            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/lvFileNames"
+                android:footerDividersEnabled="true"
+                android:headerDividersEnabled="false"
+                android:layout_below="@+id/line3"/>
+        </RelativeLayout>
+    </ScrollView>
+
+
+
 </RelativeLayout>
