--- a/app/src/main/res/layout/list_item_results_summary.xml
+++ b/app/src/main/res/layout/list_item_results_summary.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:minWidth="120sp"/>
+        android:minWidth="120sp"
+        android:layout_marginLeft="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
