--- a/app/src/main/res/layout/fragment_results_detail_top_view.xml
+++ b/app/src/main/res/layout/fragment_results_detail_top_view.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/results_summary"
+        android:text="@string/results_detail"
         android:id="@+id/tvResultsDetail"
         style = "@style/TextColor"
         android:layout_alignParentTop="true"
@@ -83,90 +83,28 @@
         android:layout_below="@+id/view">
 
         <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-
-            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/lvResultsSummary"
-                android:footerDividersEnabled="true"
-                android:headerDividersEnabled="false"
-                android:dividerHeight="2dp"
-                android:layout_alignParentTop="true"
-                />
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/dark_grey"
-                android:layout_below="@+id/lvResultsSummary"
-                android:id="@+id/line2"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="30dp"/>
-
-            <com.neuroleap.speachandlanguage.CustomViews.BarChart
-                android:layout_below="@+id/line2"
-                android:id="@+id/bcQuestionResults"
-                android:layout_width="fill_parent"
-                android:layout_height="600dp"
-                android:layout_marginLeft="18dp"
-                custom:yAxisLabel="@string/y_axis_label"
-                custom:xAxisLabel="@string/x_axis_label"
-                custom:axisLabelTextSize="22dp"
-                custom:barLabelTextsize="18dp"
-                custom:barTextAngle="45"
-                custom:barColor="@color/grey"
-                custom:axisColor="@color/dark_grey"/>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/dark_grey"
-                android:layout_below="@+id/bcQuestionResults"
-                android:id="@+id/line4"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="30dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:layout_below="@+id/line4"
-                android:text="@string/audio_files"
-                android:layout_centerHorizontal="true"
+                android:text="Large Text"
                 style = "@style/TextColor"
-                android:id="@+id/tvAudioFiles"/>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/dark_grey"
-                android:layout_below="@+id/tvAudioFiles"
-                android:id="@+id/line3"
-                android:layout_marginTop="15dp"
+                android:id="@+id/tvCategpryName"
+                android:layout_marginLeft="15dp"
                 android:layout_marginBottom="15dp"/>
 
-            <com.neuroleap.speachandlanguage.CustomViews.NonScrollListView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/lvFileNames"
-                android:footerDividersEnabled="true"
-                android:headerDividersEnabled="false"
-                android:dividerHeight="2dp"
-                android:layout_below="@+id/line3"/>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/tvCategpryName"
+                android:id="@+id/llTopView">
+            </LinearLayout>
         </RelativeLayout>
     </ScrollView>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/email_report"
-        android:id="@+id/btnEmailReport"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        style = "@style/TextColor"/>
 
 
 </RelativeLayout>
