--- a/app/src/main/res/layout/fragment_results_detail_category_view.xml
+++ b/app/src/main/res/layout/fragment_results_detail_category_view.xml
@@ -60,7 +60,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/answer_type"
+                android:text="@string/type"
                 android:id="@+id/textView17"
                 android:layout_weight="0.15"
                 style = "@style/TextColor"
